Add more entries to change log

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,8 +1,12 @@
 == Changelog ==
 = 6.2 =
+* New: The setting to Submit this form with AJAX has been moved into Lite. Forms can now be submitted without reloading the whole page.
+* New: Multiselect dropdown items used in admin pages will now include the checkbox role and the aria-checked attribute for improved accessibility with screen readers.
 * Fix: When searching for templates with the word application, all ready made solutions would appear first, making it difficult to search for an application form template.
 * Fix: The User Flow add on would display a time difference of 0 seconds as 52 years.
 * Fix: When using some shortcode options, including sanitize_url=0 or sanitize=0, the option would be treated the same as 1. 0 values will now be treated as off.
+* Fix: The gravity forms importer would not successfully install when clicking the Get Started button. Styling issues when the importer add on is active have also been fixed.
+* Fix: A redirect confirmation action with an empty redirect URL would exit early and fallback to using a message without checking the frm_redirect_url filter first for redirects set in custom code.
 * The delete option for a collapsed section is no longer faded out.
 * Duplicating a collapsed section is no longer disabled.
 * Several functions deprecated in version 2.x have been removed.
