Missed changelog file

--- a/changelog.txt
+++ b/changelog.txt
@@ -2,12 +2,14 @@
 = 6.3 =
 * New: Improved the readability of error messages when importing XML.
 * New: The custom validity message pop up that happens when trying to submit an entry with an invalid format will now use the custom invalid message defined in form settings.
+* New: A "Select All" checkbox has been added to the Import/Export page to the top of the form selection table.
 * Fix: A 0 fieldset border value would not work, showing a border instead.
 * Fix: Confirmation action redirects were no longer enforcing the sanitize_url option in shortcodes.
 * Fix: Repeater icons would appear darker than expected in Gutenberg block previews.
 * Fix: Improper use of the frm_validate_entry filter will now throw a message. Previously when a null value was returned, no validation would error, and a warning (or fatal error in PHP8) would occur. Now unless an array is returned, the previous error messages will be preserved and a message will be triggered for improper use.
 * Fix: The autocomplete page dropdown would be cut off because of an overflow styling issue when embedding a form into an existing page in a modal.
 * Fix: Using "description" as a field key would trigger a fatal error on entries list pages.
+* Fix: Search wasn't working on the Import/Export page.
 
 = 6.2.3 =
 * Fix: Forms submitted with AJAX would display an unexpected "We're sorry. It looks like you've already submitted that" message when WooCommerce v7.6.0 is active.
