--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 == Changelog ==
+= 6.4.1 =
+* New: The pop up that prevents navigating away from the form builder when changes have been made will now also pop up when options are added or removed.
+* Fix: A global JavaScript variable conflict was causing a conflict with the Google Spreadsheets add on. This was causing issues with authorizing and deauthorizing Google Sheets.
+
 = 6.4 =
 * New: A floating button has been added to some admin pages with links for documentation and support.
 * New: When importing, if a matching trashed form is found based on a key match, it will be deleted before the import begins. This prevents conflicts that cause field shortcodes and conditional logic not to update as expected when imported.
