--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 == Changelog ==
 = 6.4.1 =
 * New: The pop up that prevents navigating away from the form builder when changes have been made will now also pop up when options are added or removed.
+* New: Forms without names will now appear as (no title) when displayed as options inside of a Gutenberg block.
 * Fix: A global JavaScript variable conflict was causing a conflict with the Google Spreadsheets add on. This was causing issues with authorizing and deauthorizing Google Sheets.
 * Fix: The up arrow icon was either hidden or displayed as a down arrow for one of the styling options for section icons.
 
