--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,7 @@
 = 6.4.2 =
 * New: Entry statuses are now shown with color coded backgrounds on admin entry list pages.
 * Fix: A fatal error would occur on when sending tracking data when the php_uname function was disabled and unavailable.
+* Fix: The option to save and reload when activating an add on was not reloading the page when the setting to save the builder with AJAX was on.
 
 = 6.4.1 =
 * New: The pop up that prevents navigating away from the form builder when changes have been made will now also pop up when options are added or removed.
