--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,7 @@
 * New: Additional attributes have been added to collapsible sections in the form builder page to improve accessibility.
 * Fix: A fatal error would occur on when sending tracking data when the php_uname function was disabled and unavailable.
 * Fix: The option to save and reload when activating an add on was not reloading the page when the setting to save the builder with AJAX was on.
+* Fix: An Automatic conversion of false to array deprecation message would get logged when saving styles in newer versions of PHP.
 * Admin footer links and the floating support button have been removed for websites that use a whitelabel setting.
 
 = 6.4.1 =
