--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,7 @@
 * Fix: A fatal error would occur on when sending tracking data when the php_uname function was disabled and unavailable.
 * Fix: The option to save and reload when activating an add on was not reloading the page when the setting to save the builder with AJAX was on.
 * Fix: An Automatic conversion of false to array deprecation message would get logged when saving styles in newer versions of PHP.
+* Fix: Whitelabel icons were appearing too large when displayed as Gutenberg block options in WordPress v6.3.
 * Admin footer links and the floating support button have been removed for websites that use a whitelabel setting.
 
 = 6.4.1 =
