Update readme for v6.5.1

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,15 @@
 == Changelog ==
+= 6.5.1 =
+* New: Dropdown placeholders now use placeholder styling.
+* Fix: Stripe subscriptions would fail with a No such plan error if the payment action was created when a different mode was active when using the free Stripe action.
+* Fix: Entries would not get deleted on Stripe payment failure, and old entry data would not get displayed with payment errors, when using the free Stripe action.
+* Fix: The payment expire date and next subscription billing date values were not accurate for payment table records when using the free Stripe action.
+* Fix: A wp_frm_payments doesn't exist database error would get logged when viewing an entry when payments migrations had not run yet.
+* Fix: Conditional logic wasn't working for redirect confirmation actions when using the free Stripe action. The same redirect URL would always be used regardless of field values.
+* Fix: An unexpected redirect to global settings would happen when trying to view payments when only the Paypal payments migration has run.
+* Fix: Stripe scripts were not loading properly when the Lite minified JS was available but not the minified Pro scripts.
+* Fix: CAPTCHA fields were not properly initializing inside of Elementor pop ups.
+
 = 6.5 =
 * New: Stripe forms are now available for free without the need for other add ons. Global settings now include a Stripe section. Payment fields and Collect Payment actions have been added, as well as the Global setting for defining the default currency.
 * Fix: The TinyMCE editor would exceed the page boundaries after the fullscreen button was clicked.
