--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,9 @@
 == Changelog ==
 = 6.5.1 =
 * New: Dropdown placeholders now use placeholder styling.
+* New: The honeypot field is now hidden using a new style rule to help avoid a styling conflict with RTL languages in Elementor.
+* New: The honeypot field has been updated to make it more random and less obvious.
+* New: An additional attribute has been added for basic honeypot protection to help avoid conflicts with false postiives caused by autofilling form fields.
 * Fix: Stripe subscriptions would fail with a No such plan error if the payment action was created when a different mode was active when using the free Stripe action.
 * Fix: Entries would not get deleted on Stripe payment failure, and old entry data would not get displayed with payment errors, when using the free Stripe action.
 * Fix: The payment expire date and next subscription billing date values were not accurate for payment table records when using the free Stripe action.
