--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 == Changelog ==
+= 6.5.2 =
+* Fix: Field validation errors were accidentally getting removed. Instead of validation errors, it would show an incorrect It looks like you've already submitted that error message.
+* Fix: The honeypot field would cause inline submit buttons to break to the next line.
+
 = 6.5.1 =
 * New: Dropdown placeholders now use placeholder styling.
 * New: The honeypot field is now hidden using a new style rule to help avoid a styling conflict with RTL languages in Elementor.
