Update readme for v6.5.4

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,13 @@
 == Changelog ==
+= 6.5.4 =
+* New: A database query has been optimized when checking for entries in a timeframe.
+* New: The honeypot class name will no longer change as often to help prevent issues with visible honeypot fields.
+* New: The placement of dropdown arrows has been updated for better theme compatibility.
+* Fix: Really long strings with no spaces were not being made short enough during truncation. This would result in really large text previews for HTML fields when using base 64 image data.
+* Fix: An element is undefined JavaScript error has been fixed.
+* Fix: The "Add fields here" placeholder would not always appear after deleting every field.
+* Fix: The "Add fields here" placeholder would sometimes overlap the form updated message.
+
 = 6.5.3 =
 * New: A new "Refunded Payment" action trigger type has been added for Stripe payments.
 * New: Additional validation checks have been added when JavaScript validation is enabled that prevent a form from submitting with invalid values like an a number with an invalid step.
