--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,16 @@
 == Changelog ==
+= 6.7 =
+* New: The new form modal pop up has been replaced with a new form templates page. Now form templates can be flagged as favourite.
+* New: The option to send monthly and yearly summary emails with form and payment stats has been added to global settings.
+* New: A new dashboard landing page has been added with form and payment stats.
+* New: Error handling has been improved when trying to edit a form in trash or a form that does not exist.
+* New: The query for getting entry count has been optimized, significantly reducing the time it takes to count entries.
+* Fix: The form search was broken on some databases when comparing a datetime value to a non-date value.
+* Fix: The default maximum value of 5 used for row count in a Paragraph field would carry to other field type settings after changing field type, acting as a 5 character limit. This is now cleared when changing field types from Paragraph to another field.
+* Fix: A styling issue has been fixed that was causing the WordPress sidebar to overlap on top of admin page content when using specific user preferences.
+* Fix: The pirate forms importer style has been updated to look better.
+* Fix: A fatal error on the welcome page has been fixed.
+
 = 6.6 =
 * New: Database indexes have been added to entry and entry meta tables to help significantly optimize some database queries, including queries used for reports.
 * New: Honeypot field containers will no longer include an aria-hidden attribute. This was causing issues with Accessibility testing tools including Google PageSight.
