--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,7 @@
 * New: A new dashboard landing page has been added with form and payment stats.
 * New: Error handling has been improved when trying to edit a form in trash or a form that does not exist.
 * New: The query for getting entry count has been optimized, significantly reducing the time it takes to count entries.
+* New: Default submit button HTML has been updated for new forms. Forms with the previous HTML would trigger the Previous button when the Enter key was pressed. Forms with the new layout have corrected this and will trigger the Next button instead when the Enter key is pressed.
 * Fix: Zebra stripe styling on the View Entry page would sometimes repeat the same background color when hidden empty rows were hidden.
 * Fix: The default maximum value of 5 used for row count in a Paragraph field would carry to other field type settings after changing field type, acting as a 5 character limit. This is now cleared when changing field types from Paragraph to another field.
 * Fix: A styling issue has been fixed that was causing the WordPress sidebar to overlap on top of admin page content when using specific user preferences.
