--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,7 @@
 == Changelog ==
 = 6.7.1 =
+* Security: Form input from unprivileged users will now be sanitized more with strict rules and filtered more on display, allowing only a few basic HTML tags (p, i, b, strong and br) with no support for attributes. The allowed tags can be modified using a new frm_allowed_form_input_html filter.
+* Security: Additional sanitizing has been added when making live form builder updates to avoid malicious changes from privileged users.
 * New: Formidable branding has been removed on the import page when white labelling is enabled.
 * New: The permission to view forms has been renamed to "View Forms List" to remove ambiguity.
 * Fix: A failed to open stream warning would get logged when calling include(modal.php) on some admin pages.
