--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,18 @@
 == Changelog ==
+= 6.8 =
+* New: New fields will no longer appear on the front end until the form builder is saved. This way a form can be used without partial incomplete changes while a form is being worked on.
+* New: An HSL color value can now be used in the visual styler. Previously these values would be prepended by # and PHP warnings would cause styles to break.
+* New: Stripe subscriptions will now cancel at period end by default instead of cancelling immediately.
+* Fix: On some sites, while using Google Chrome, some style card menu options would be missing. This includes the option to Delete a style or to Set a style as default.
+* Fix: Long forms loaded with AJAX were loading in smaller batches than intended, usually pulling only a few fields at a time. This has been restored to the intended batch size of 15 fields at a time.
+* Fix: A styling issue in some search search inputs has been fixed.
+* Fix: The view payment page was appearing blank, and table column options were missing when editing a table view.
+* Fix: An error message wouldn't properly appear when using a 3D secure card and failing the payment.
+* Fix: A subscription with a failed payment would incorrectly redirect like a confirmed payment.
+* Fix: The toggle to disable form styling would still appear active when disabled through the Manage Styling global setting.
+* List tag types include ul, ol, and li are now allowed in form input HTML by default.
+* Form input HTML will no longer be filtered to strip most HTML on display if the entry was created by or edited by a privileged user.
+
 = 6.7.2 =
 * Fix: The setting to disable Formidable styling on a form was not working and the Formidable styling would still get applied.
 
