--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,6 @@
 == Changelog ==
 = 6.8 =
+* Security: Nonce validation was missing when saving changes on the form settings page.
 * New: A new dashboard landing page has been added with a list of recent entries, access to your inbox, and a payment summary, all in one place.
 * New: New fields will no longer appear on the front end until the form builder is saved. This way a form can be used without partial incomplete changes while a form is being worked on.
 * New: An HSL color value can now be used in the visual styler. Previously these values would be prepended by # and PHP warnings would cause styles to break.
