--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,7 @@
 == Changelog ==
+= 6.8.2 =
+* Fix: The process of connecting an account to formidableforms.com would fail in some web browsers.
+
 = 6.8.1 =
 * Security: A nonce check was missing on an action for dismissing a call to action on the global settings page.
 * New: Bulk action checkboxes on the form list now include screen reader text for improved accessibility.
