--- a/changelog.txt
+++ b/changelog.txt
@@ -66,7 +66,7 @@
 * Fix: A Uncaught TypeError: Cannot access offset of type string on string error has been fixed when checking for add-on data.
 * Fix: License expired emails would get incorrectly sent for rate limited API requests.
 * Fix: Some color style settings would output invalid RGB values when using a RGB color as the style setting value.
-* API requests sent for retreiving add-on and template data will now happen less frequently.
+* API requests sent for retrieving add-on and template data will now happen less frequently.
 * A few old deprecated global JavaScript functions have been removed including frm_resend_email, frmOnSubmit, and frmDeleteEntry.
 * Some old CSS rules using -webkit- and -moz- prefixes have been removed, helping to reduce CSS file size.
 
@@ -139,7 +139,7 @@
 * New: [frm-entry-links] shortcodes now support a new drafts=all option, and drafts=2 and drafts=3 options for filtering for in-progress and abandoned entries. It also now supports comma separated values like drafts="2,3" to include both in-progress and abandoned entries.
 * New: Checkbox groups will no longer use an aria-required attribute on the group element. This was causing accessibility errors in axe DevTools and Google PageSpeed.
 * New: The more options icon in the form builder now has screen reader text for improved accessibility.
-* New: A new test flag colum has been added for payments for more accurate payment tracking.
+* New: A new test flag column has been added for payments for more accurate payment tracking.
 * Fix: A fix has been added to help avoid warnings and error messages when form data is sent in an unexpected format.
 * Fix: Name fields would not properly reset to their default values when using a start over button or when the field was conditionally shown.
 * Fix: Using drafts=both with an [frm-entry-links] shortcode would include abandoned and in-progress entries when it is intended to only include draft and submitted entries.
@@ -215,7 +215,7 @@
 * New: A floating button has been added to some admin pages with links for documentation and support.
 * New: When importing, if a matching trashed form is found based on a key match, it will be deleted before the import begins. This prevents conflicts that cause field shortcodes and conditional logic not to update as expected when imported.
 * New: The field search has been improved. Inactive fields will no longer appear when there is no match, and categories will no longer appear when no children fields are visible.
-* New: Captcha key settings will now be trimmed on save to avoid unecessary whitespace characters reported to cause issues in some cases.
+* New: Captcha key settings will now be trimmed on save to avoid unnecessary whitespace characters reported to cause issues in some cases.
 * New: Form previews inside of Gutenberg blocks are no longer interactive and can no longer be submitted when clicking the submit button in the preview.
 * Fix: Rapidly clicking the preview button before the page has loaded would cause a JavaScript error preventing the preview button from working.
 
@@ -423,7 +423,7 @@
 * Removed a restriction that was preventing a second summary field from being added after adding the first.
 
 = 5.4.4 =
-* New: Option icons are now be added dynamically when a field is selected to reduce the HTML required on load. This signficantly improves form builder performance for fields with many options.
+* New: Option icons are now be added dynamically when a field is selected to reduce the HTML required on load. This significantly improves form builder performance for fields with many options.
 * New: Added a new frm_before_duplicate_entry_values filter for customizing the data of a duplicated entry before it is saved.
 * New: Maximum character length is now validated server side on form submit.
 * Fix: The duplicate option pop up was triggering incorrectly when dragging new options in Chrome.
@@ -794,7 +794,7 @@
 = 4.06 =
 * New: Better accessibility for honeypot field and message after submit.
 * New: Add a Dismiss all button in the inbox.
-* New: Add 'frm_user_id_display' hook for showing something other than the dispay name by default in user ID fields.
+* New: Add 'frm_user_id_display' hook for showing something other than the display name by default in user ID fields.
 * Set the default styling to use grids since most browsers support it now.
 * Fix: On some sites, permissions were preventing a form from being created from a template.
 * Fix: The button colors were overriding eachother with some settings.
@@ -1204,7 +1204,7 @@
 * **Pro Version Forms**
 * New: Show a generated screenshot of the embedded form in the form builder rather than the first few fields
 * Fix: Auto updates with the nested version going from 3.0 were failing and updating to lite
-* Fix: Some default values were overiding non defaults when the form was displayed. This included user ID fields and other ifelds with separate values.
+* Fix: Some default values were overriding non defaults when the form was displayed. This included user ID fields and other ifelds with separate values.
 * Fix: Recompile the combined javascript file any time the pro version number changes
 * Fix: Embedded forms were being changed when the parent form was saved
 * Fix: Dynamic fields showing the entry key were blank with [25 show=key].
@@ -1353,7 +1353,7 @@
 = 2.05.04 =
 * Tweak: Remove recaptcha and website fields from sample Contact us form template since most people don't need them
 * Fix: Updates for WP 4.9 compatibility. This includes preventing double filtering on contact form widgets and using the WordPress Codemirror scripts for the form CSS page.
-* Fix: Prevent "are you sure" message that has started occuring from WordPress when saving a WordPress form
+* Fix: Prevent "are you sure" message that has started occurring from WordPress when saving a WordPress form
 * Fix: Correctly validate form fields with an Inside field label when HTML5 forms are not enabled
 * Fix: Set the background color on loading form submit button. Depending on the hover button covers, the loading spinner may have been the same color as the button
 * Fix: Additional security checks when getting POST or GET values in some places
@@ -1389,7 +1389,7 @@
 * Fix: Prevent endless loops in conditional logic when fields are dependent on each other
 * Fix: Searching number field values with LIKE was causing issues
 * Fix: Use secure cookies on SSL sites
-* Fix: Convert dates in certain formats more realibly before save
+* Fix: Convert dates in certain formats more reliably before save
 * Fix: Correctly duplicate fields inside a repeating section
 
 = 2.05.01 =
@@ -2360,7 +2360,7 @@
 * **Pro Forms Features:**
 * Views can now be filtered by fields in the repeating sections.
 * Added [parent_id] shortcode for use in views. This shortcode will only have a value when the displaying entries in repeating sections.
-* Allow views to be created using the repeated entries. Since each repeating row is an entry in a hidden form, we can allow views to be created using those repeating rows for more flexability.
+* Allow views to be created using the repeated entries. Since each repeating row is an entry in a hidden form, we can allow views to be created using those repeating rows for more flexibility.
 * Added order parameter to frm-entry-links
 * Allow options in a post status field to come from the form builder. The options should have separate values and the saved values can include 'publish', 'draft', 'private', 'scheduled'.
 * Remove the option to lock field and form keys. This is more of a hassle than a feature.
@@ -2481,7 +2481,7 @@
 * Fix timezones for searching by entry creation and updated dates in a view
 
 = 2.0.08 =
-* Fix security vulnerability allowing shortcodes to be excuted inside a form https://research.g0blin.co.uk/?p=618&d=i4ziyggqao0oz0L0vpUTd8KZwrO2P9Mw
+* Fix security vulnerability allowing shortcodes to be executed inside a form https://research.g0blin.co.uk/?p=618&d=i4ziyggqao0oz0L0vpUTd8KZwrO2P9Mw
 * Added frm_filter_final_form hook. This will need to be used to cover shortcodes that span multiple blocks of field HTML since we can't do a general shortcode replacement on the rendered form
 * Revert change that prevented scripts from firing in the form success message
 * Fix timestamp timezone on view/edit entry page
@@ -2556,7 +2556,7 @@
 * Styling enhancements for left and right label settings
 * Deactivate plugin after uninstall to prevent tables from being added back
 * Add frm_text_block class to Layout tab
-* Fix migration of email settigns that haven't been updated in over two years
+* Fix migration of email settings that haven't been updated in over two years
 * Fix emailing from only a multiple word name with no email
 * Send emails for WordPress default if trying to send from Yahoo
 * Pro: Trigger calculation update each time a row is added or removed from repeating section
@@ -2578,7 +2578,7 @@
 * Pro: If a comma separated list of dates is sent for formatting, explode it before formatting
 * Pro: Increase the backtrack limit when needed when replacing shortcodes in the view content if server has the limit below default
 * Pro: Fix issue causing csv export error
-* Pro: Fix the issue cuasing new posts to not be linked to a view if a field is selected for the post content
+* Pro: Fix the issue causing new posts to not be linked to a view if a field is selected for the post content
 * Pro: Fix issue some users are having with blank date fields
 * Pro: Fix ending collapsible sections at the end of a section instead of waiting for the next section
 * Pro: Fix firing calculations on page load when there are multiple calculations
@@ -2591,7 +2591,7 @@
 * Add a fallback if dbDelta is missing
 * Remove inline js from the draft button in the default HTML to prevent 404/403 errors on some servers. This change only applies to new forms
 * Move the legend tag into the customizable HTML, but without a migration so it won't be added to existing forms
-* Move the "before fields" HTML into the fieldset to it will be parallell with the "After fields" HTML
+* Move the "before fields" HTML into the fieldset to it will be parallel with the "After fields" HTML
 * Make sure partial form transients aren't saved for long forms. Make sure it's all or nothing.
 * Make sure the parent_form_id column was added, and try to add it again if it's not there
 * Pro: Allow [25 show=count]. This shortcode will return a count of items instead of the items themselves. Intended for use with a repeating section field, but would work with anything.
@@ -2709,7 +2709,7 @@
 * Added a few ajax nonce checks but don't require valid nonce for logged-out users for caching reasons
 * Allow data-something="value" inside the [input] short code
 * Pro: Allow [default-message] to have short code parameters to set rtl (direction=rtl), font size (font_size="14px"), and styling (text_color="000" border_width="1px" border_color="000" bg_color="fff" alt_bg_color="eee").
-* Pro: Added frm_html_scoll_box class for scrolling content in an HTML field
+* Pro: Added frm_html_scroll_box class for scrolling content in an HTML field
 * Pro: Allow recurring entries using values like "Third Wednesday of [frmcal-date]"
 * Pro: Allow comma separated view filters for entry key and id
 * Pro: Allow drafts=both in view short code and form results short code
@@ -2893,7 +2893,7 @@
 * PRO: Updated file uploading progress bar with frm_uploading_files hook added to text
 * PRO: Only show "create entry in form" box if user has permission to create entries
 * PRO: Removed icons from error message
-* PRO: Fixed collapsable entry list bullets
+* PRO: Fixed collapsible entry list bullets
 * PRO: Fixed dependent multi-select data from entries fields on edit
 * PRO: Added frm_back_button_class hook
 * PRO: Fixed quotation marks in conditional logic
