--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,7 @@
 = 6.11.1 =
 * New: Screen reader text has been updated on some admin pages to improve accessibility.
 * New: Hover styling has been updated for modal close icons to improve user experience.
+* Fix: The way Popper scripts are registered have been updated to help avoid a new conflict introduced in a recent WP Bakery update.
 * Fix: The reCaptcha settings name was missing in a global settings string.
 * The minimum supported version of Formidable Pro has been bumped to version 6.0.
 * The function FrmAddonsController::is_license_expiring has been deprecated.
