Update readme line

--- a/changelog.txt
+++ b/changelog.txt
@@ -8,7 +8,7 @@
 * Checks have been added to no longer include fields with form state on servers where open SSL is not installed. This is to improve compatibility.
 * Some updates have been made to improve the syncing of field option updates and conditional logic settings.
 * The setting to use HTML5 has been removed. This is now always true for all sites.
-* Some old deprecated PHP functions have been removed including FrmAppController::include_embed_form_icons, FrmAppController::get_form_shortcode.
+* Some old deprecated PHP functions have been removed including FrmAppController::include_embed_form_icons and FrmAppController::get_form_shortcode.
 * The deprecated JavaScript function frmFrontForm.savingDraft has been removed.
 
 = 6.11.2 =
