--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,14 @@
 == Changelog ==
+= 6.13.1 =
+* New: The code for moving fields in the builder has been optimized for large forms.
+* New: Field keys will now work in place of field ids when creating or updating repeater entries using API actions or when calling FrmEntryMeta::update_entry_metas directly.
+* Fix: Forms would not duplicate as expected when one of the fields had "description" as a field key value.
+* Fix: A fatal error would occur when failing to search for plugins due to internet connection problems.
+* Fix: A JavaScript error would occur when trying to validate a read only time field.
+* Fix: A Trying to access array offset on value of type bool PHP Warning that could happen in rare edge cases when working in th Gutenberg editor has been fixed.
+* Fix: A layering issue would show section fields on top of the pop up for merging fields into groups.
+* Fix: Turnstile elements are now only rendered when the field is visible.
+
 = 6.13 =
 * Fix: A JavaScript error triggered after detecting an error with a form field before processing the payment would cause the form to stop responding.
 * Fix: A Call to undefined method FrmProAppHelper::use_chosen_js fatal error would happen when using versions of Formidable Pro older than version 6.8.
