--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,6 @@
 == Changelog ==
-= 6.13.1 =
+= 6.14 =
+* New: The visual styler has gotten a major update. Many components have been redesigned, and a new quick settings page has been added.
 * New: The code for moving fields in the builder has been optimized for large forms.
 * New: Field keys will now work in place of field ids when creating or updating repeater entries using API actions or when calling FrmEntryMeta::update_entry_metas directly.
 * Fix: In some cases it was possible for non-customizable fields such as radio buttons and dropdowns to be used for Akismet guest info.
