--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 == Changelog ==
+= 6.14.1 =
+* New: When a Name field is mapped to a Stripe action included in this plugin, the (First) and (Last) descriptions are now included in the dropdown option label to make it more clear how the values are mapped.
+* New: Redirects have been added to detect dead URLs resulting in permission errors after activating or deactiving the Formidable Views add-on.
+* Fix: Checkbox styling was not properly getting applied on the edit entry admin page, causing checkboxes to always appear unchecked.
+
 = 6.14 =
 * New: The visual styler has gotten a major update. Many components have been redesigned, and a new quick settings page has been added.
 * New: The code for moving fields in the builder has been optimized for large forms.
